[package]
name = "rsfshttp"
version = "0.1.0"
authors = ["Peter Stanko <peter.stanko0@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
slog = "2.5.2"
serde = "1.0.114"
serde_json = "1.0.57"
glob = "0.3.0"
slog-term = "2.6.0"
actix-web = "2.0"
actix-rt = "1.1.1"
config = "0.10.1"
dotenv = "0.15.0"
chrono = "0.4.13"
pathdiff = "0.2.0"
