[package]
name = "rsfshttp"
version = "0.1.0"
authors = ["Peter Stanko <peter.stanko0@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
glob = "0.3"
actix-web = "3.3"
actix-rt = "1.1"
config = "0.10"
dotenv = "0.15"
chrono = "0.4"
pathdiff = "0.2"

# Logging
log = "0.4"
env_logger = "0.8"
anyhow = "1.0"
clap = "2.33"
